--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "date-fns": "^2.29.3",
     "lucide-react": "^0.516.0",
     "react": "^19.1.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-select": "^5.10.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "world-countries": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.10",
     "@types/react-scroll": "^1.8.10",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
